--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "typescript": "^5.2.2"
   },
   "dependencies": {
-    "@prisma/client": "^5.4.2"
+    "@prisma/client": "^5.4.2",
+    "@types/express": "^4.17.21",
+    "ejs": "^3.1.9",
+    "express": "^4.18.2"
   }
 }
